# HackNotts25-NHScribe

./: .gitignore  CHANGES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  app.py  generate_fake_data.py  models.py  package-lock.json  package.json  pdf_gen.py  pyproject.toml  requirements.txt  scribe.db  start_backend.sh  start_servers.py  test_api.py  test_deployment.sh  test_results_insert.py
front-end/: package-lock.json  package.json  start_frontend.sh
front-end/public/: index.html
front-end/src/: App.js  Footer.css  Footer.jsx  NHScribeDashboard.css  NHScribeDashboard.jsx  NewLetter.css  NewLetter.jsx  ReviewLetter.css  ReviewLetter.jsx  config.js
letter_utils/: create_pdf.py  generate_letter_content.py
letters/: letter_16dda341.html  letter_1f291f8301b6.html  letter_246d0cbaea8d.html  letter_2f73d737adf9.html  letter_42947a5a3170.html  letter_471796ca4201.html  letter_50474e553133.html  letter_59a3ff30185e.html  letter_9d365fce03d1.html  letter_b7182284f98e.html  letter_d3278b2f9d75.html
tests/: oneline.csv  test.csv  test_api.py  test_gen.py
tests_csv/: oneline.csv
